test/interfaces/jturner/min_concept_no_impl_stmt.good
min_concept_no_impl_stmt.chpl:9: In function 'minFn':
min_concept_no_impl_stmt.chpl:9: error: Implementation condition not satisfied.

